--- a/index.html
+++ b/index.html
@@ -10,16 +10,29 @@
   </head>
   <body>
     <section id="container">
+      <div class="header">
+        <h1>Create Account</h1>
+      </div>
       <form id="form">
         <div class="form-control">
-          <input type="text" id="name" placeholder="Name" />
+          <input
+            type="text"
+            id="username"
+            placeholder="Username"
+            autocomplete="off"
+          />
           <i class="fa-solid fa-circle-exclamation"></i>
           <i class="fa-solid fa-circle-check"></i>
           <small></small>
         </div>
 
         <div class="form-control">
-          <input type="email" id="email" placeholder="Email" />
+          <input
+            type="text"
+            id="email"
+            placeholder="Email"
+            autocomplete="off"
+          />
           <i class="fa-solid fa-circle-exclamation"></i>
           <i class="fa-solid fa-circle-check"></i>
           <small></small>
@@ -43,7 +56,7 @@
           <small></small>
         </div>
 
-        <button id="submit">Submit</button>
+        <button id="btn_submit">Submit</button>
       </form>
     </section>
 
